<resources>
    <string name="app_name">Mobile_cw_w1810008</string>
    <string name="about_btn">About</string>
    <string name="newGame_btn">New Game</string>
    <string name="greater">Greater</string>
    <string name="equal">Equal</string>
    <string name="less">Less</string>
    <string name="close">Close</string>
    <string name="pledge">I confirm that I understand what plagiarism is and have read and
    understood the section on Assessment Offences in the Essential
    Information for Students. The work that I have submitted is
    entirely my own. Any work from other authors is duly referenced
    and acknowledged.</string>
    <string name="Continue" >Continue</string>
    <string name="arg1">Arg1</string>
    <string name="arg2">Arg2</string>
    <string name="enter_the_correct_operator">enter the correct operator</string>
</resources>